# Cubiks

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  _block_8hpp_source.html  _camera_8hpp_source.html  annotated.html  annotated_dup.js  class_block-members.html  class_block.html  class_block.js  class_camera-members.html  class_camera.html  class_camera.js  classes.html  dir_08d237fc27d4ecd563f71c5d52f2fecc.html  dir_09e761304027c904456130627fd4dcf5.html  dir_09e761304027c904456130627fd4dcf5.js  files.html  index.html  navtreedata.js  navtreeindex0.js
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: Documentation.yml  Linux.yml  MacOS.yml  Windows.yml  ci.yml
application/: main.cpp
docs/: Doxyfile.in
includes/: Block.hpp  Camera.hpp
patches/: 0001-fix-removed-deploy-project-from-CMakeLists.txt.patch
scripts/: build.sh  run.sh
search/: all_0.js  all_1.js  classes_0.js  classes_1.js  pages_0.js  searchdata.js
sources/: Block.cpp  Camera.cpp
